--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 description=Release Java or Gradle Plugin projects with conventional versioning.
 version=1.0.0
 group=se.bjurr.gradle
+publishGradlePluginToGradlePortal=false
