chore(release): 0.1.0 [GRADLE SCRIPT]

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
-description=Release Java or Gradle Plugin projects with conventional versioning.
-version=1.0.0
-group=se.bjurr.gradle
+#
+#Mon Sep 30 19:23:35 CEST 2024
 publishGradlePluginToGradlePortal=false
+description=Release Java or Gradle Plugin projects with conventional versioning.
+version=0.1.0
+group=se.bjurr.gradle
