fix: trying to fix publishing

--- a/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
+++ b/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
@@ -186,7 +186,7 @@ publishing {
 		maven {
 			name = getEffectiveConfigConventionalelease().mavenRepositoryName
 			credentials(PasswordCredentials)
-			url = getEffectiveConfigConventionalelease().mavenRepositoryUrl
+			url = getEffectiveConfigConventionalelease().mavenRepositoryUrl+"staging/deploy/maven2/"
 		}
 	}
 }
