--- a/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
+++ b/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
@@ -22,6 +22,7 @@ def getGivenConfigConventionalelease() {
 		tags: project.getProperties().getOrDefault("tags", ""),
 		implementationClass: project.getProperties().getOrDefault("implementationClass", ""),
 		stripGradlePluginSuffix: project.getProperties().getOrDefault("stripGradlePluginSuffix", "true") == "true",
+		// If it should be published to Plugin Portal or Central
 		publishGradlePluginToGradlePortal: project.getProperties().getOrDefault("publishGradlePluginToGradlePortal", "true") == "true",
 		// ---- default config ----
 	]
@@ -135,6 +136,7 @@ if (getEffectiveConfigConventionalelease().repoType == "GRADLE") {
 			.replaceAll("[\"']","")
 	logger.lifecycle("pluginId ${pluginId} displayName ${displayNameValue}")
 	gradlePlugin {
+		automatedPublishing = false
 		website = getEffectiveConfigConventionalelease().website
 		vcsUrl = getEffectiveConfigConventionalelease().vcsUrl
 		description = project.description.replaceAll("[\"']","")
@@ -155,9 +157,8 @@ if (getEffectiveConfigConventionalelease().repoType == "GRADLE") {
  * Maven publishing
  */
 publishing {
+		if (getEffectiveConfigConventionalelease().repoType != "GRADLE") {
 	publications {
-		if (getEffectiveConfigConventionalelease().repoType == "GRADLE") {
-		} else {
 			mavenJava(MavenPublication) { publication ->
 				if (getEffectiveConfigConventionalelease().useShadowJar) {
 					logger.lifecycle("shadow jar in maven publication")
