--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,4 @@ publishGradlePluginToGradlePortal=false
 description=Release Java or Gradle Plugin projects with conventional versioning.
 version=0.1.7
 group=se.bjurr.gradle
+repoType=GRADLE
