--- a/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
+++ b/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
@@ -304,7 +304,7 @@ task release(type: GradleBuild) {
 		tasks += ["publishPlugins"]
 	} else {
 		tasks += [
-			"publishToSonatype",
+			"publish",
 			"closeAndReleaseStagingRepositories",
 		]
 	}
