--- a/build.gradle
+++ b/build.gradle
@@ -21,3 +21,16 @@ spotless {
 processResources.dependsOn spotlessApply
 
 apply from: "src/main/groovy/se.bjurr.gradle.conventional-release.gradle"
+
+/**
+ * Update README with config
+ */
+def defaultConfig = file('src/main/groovy/se.bjurr.gradle.conventional-release.gradle')
+		.text
+		.takeBetween('// ---- default config ----')
+		.stripIndent()
+
+def newReadme = file('README.md')
+		.text
+		.replaceAll("(?s)(.*// ---- default config ----).*(// ---- default config ----.*)", "\$1$defaultConfig\$2")
+file('README.md').write(newReadme)
