--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,21 @@
+/**
+ * Used when working with this plugin.
+ */
 plugins {
 	id "groovy-gradle-plugin"
-	id "com.gradle.plugin-publish" version "1.3.0"
 	id "io.github.gradle-nexus.publish-plugin" version "2.0.0"
 	id "se.bjurr.gitchangelog.git-changelog-gradle-plugin" version "2.1.2"
 	id "com.diffplug.spotless" version "6.25.0"
+}
+
+/**
+ * Dependencies needed by the plugin in src/main/groovy
+ */
+dependencies {
+	implementation "com.gradleup.shadow:shadow-gradle-plugin:8.3.2"
+	implementation "io.github.gradle-nexus:publish-plugin:2.0.0"
+	implementation "com.gradle.publish:plugin-publish-plugin:1.3.0"
+	implementation "se.bjurr.gitchangelog:git-changelog-gradle-plugin:2.1.2"
 }
 
 repositories {
