fix: applying com.gradle.plugin-publish

--- a/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
+++ b/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
@@ -47,7 +47,9 @@ project.plugins.apply 'java-library'
 project.plugins.apply 'maven-publish'
 project.plugins.apply 'signing'
 project.plugins.apply "io.github.gradle-nexus.publish-plugin"
-project.plugins.apply "com.gradle.plugin-publish"
+if (getEffectiveConfigConventionalelease().publishGradlePluginToGradlePortal) {
+	project.plugins.apply "com.gradle.plugin-publish"
+}
 project.plugins.apply "se.bjurr.gitchangelog.git-changelog-gradle-plugin"
 
 
