fix: avoid closeAndReleaseStagingRepositories, it creates duplicate staging repositories

--- a/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
+++ b/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
@@ -286,7 +286,7 @@ task release(type: GradleBuild) {
 	} else {
 		tasks += [
 			"publish",
-			"closeAndReleaseStagingRepositories",
+			//"closeAndReleaseStagingRepositories",
 		]
 	}
 
