--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ repositories {
 	mavenLocal()
 }
 
+sourceCompatibility = 17
+targetCompatibility = 17
+
 sourceCompatibility = 11
 targetCompatibility = 11
 
