fix: ading source and javadoc jars

--- a/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
+++ b/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
@@ -150,6 +150,11 @@ if (getEffectiveConfigConventionalelease().publishGradlePluginToGradlePortal) {
  * Maven publishing
  */
 if (getEffectiveConfigConventionalelease().repoType != "GRADLE") {
+	java {
+		withSourcesJar()
+		withJavadocJar()
+	}
+
 	publishing {
 		publications {
 			mavenJava(MavenPublication) { publication ->
