feat: filtering changelog commits and prepend by default

--- a/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
+++ b/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
@@ -6,6 +6,9 @@ def getGivenConfigConventionalelease() {
 		// relocate: org:org,com:com # Empty by default will.
 		relocate: project.getProperties().getOrDefault("relocate", ""),
 		updateChangelog: project.getProperties().getOrDefault("updateChangelog", "true") == "true",
+		ignoreCommitsIfMessageMatches: project.getProperties().getOrDefault("ignoreCommitsIfMessageMatches", "^\\[maven-release-plugin\\].*|^\\[Gradle Release Plugin\\].*|^Merge.*|.*\\[GRADLE SCRIPT\\].*"),
+		// If not prepending, it will rewrite the entire changelog
+		prependChangelogToFile: project.getProperties().getOrDefault("prependChangelogToFile", "true") == "true",
 		setVersionConventional: project.getProperties().getOrDefault("updateChangelog", "true") == "true",
 		website: project.getProperties().getOrDefault("website", "https://github.com/tomasbjerre/" + project.name),
 		vcsUrl: project.getProperties().getOrDefault("vcsUrl", "https://github.com/tomasbjerre/" + project.name),
@@ -58,6 +61,10 @@ if (getEffectiveConfigConventionalelease().updateChangelog
 	project.plugins.apply "se.bjurr.gitchangelog.git-changelog-gradle-plugin"
 	gitChangelogSemanticVersion {
 		suffixSnapshotIfNotTagged = false
+	}
+	gitChangelog {
+		ignoreCommitsIfMessageMatches = getEffectiveConfigConventionalelease().ignoreCommitsIfMessageMatches
+		prependToFile = getEffectiveConfigConventionalelease().prependChangelogToFile
 	}
 }
 
