feat: optionally add or adjust plugins for Gradle

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,4 @@ publishGradlePluginToGradlePortal=false
 description=Release Java or Gradle Plugin projects with conventional versioning.
 version=0.6.0
 group=se.bjurr.gradle
+adjustExistingGradlePluginPlugins=true
